--- a/projekti ne grup/home.html
+++ b/projekti ne grup/home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>AutoKosova.com</title>
     <link rel="stylesheet" href="home.css">
 </head>
 <body>
@@ -15,6 +15,8 @@
             <li><a href="sign.html">Login</a></li>
         </ul>
     </div>
+
+
 
 <script src="home.js"></script>
 </body>
