--- a/projekti ne grup/about.html
+++ b/projekti ne grup/about.html
@@ -16,6 +16,35 @@
         </ul>
     </div>
 
+
+<title>Luxury Car Showroom</title>
+  <link rel="stylesheet" href="cars.css">
+</head>
+<body>
+  <header>
+    <h1>Luxury Car Showroom</h1>
+    <p>Explore our collection of premium cars and check their current condition!</p>
+  </header>
+
+  <div class="filter">
+    <label for="conditionFilter">Filter by Condition:</label>
+    <select id="conditionFilter">
+      <option value="all">All</option>
+      <option value="Excellent">Excellent</option>
+      <option value="Good">Good</option>
+      <option value="Fair">Fair</option>
+      <option value="Superb">Superb</option>
+    </select>
+  </div>
+
+  <div id="car-list"></div>
+
+  <footer>
+    <p>© 2025 Luxury Car Showroom | Designed by GPT-5 🚀</p>
+  </footer>
+
+
+
     
 <script src="about.js"></script>
 </body>
