--- a/projekti ne grup/home.html
+++ b/projekti ne grup/home.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AutoKosova.com</title>
     <link rel="stylesheet" href="home.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 </head>
 <body>
     
@@ -15,9 +16,90 @@
             <li><a href="sign.html">Login</a></li>
         </ul>
     </div>
-
-
+    <div class="d-flex flex-wrap justify-content-center gap-3"></div>
+            <div class="card" style="width: 18rem;">
+                <img src="makinat/audiA5-quattro-6-44km-tkalume.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Audi A5 2016</h5>
+                    <p class="card-text">Qmimi : 20500€</p>
+                    <a href="about.html/" class="btn btn-primary">Go somewhere</a>
+                </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img src="makinat/bmw-m3-competition-2022.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">BMW M3 competition 2022</h5>
+                    <p class="card-text">Qmimi : 70000€</p>
+                    <a href="about.html/" class="btn btn-primary">Go somewhere</a>
+                </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img src="makinat/ford-focus-2008.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Ford Focus 2008</h5>
+                    <p class="card-text">Qmimi : 2700€</p>
+                    <a href="about.html/" class="btn btn-primary">Go somewhere</a>
+                </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img src="makinat/G-class-mercedes-G63.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">G Class Mercedes G63</h5>
+                    <p class="card-text">Qmimi : 138000€</p>
+                    <a href="about.html/" class="btn btn-primary">Go somewhere</a>
+                </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img src="makinat/golf5-2.0.tdi.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Golf 5 2010</h5>
+                    <p class="card-text">Qmimi : 5000€</p>
+                    <a href="about.html/" class="btn btn-primary">Go somewhere</a>
+                </div>
+            </div>
+                <div class="card" style="width: 18rem;">
+                <img src="makinat/lamborghini-gallardo-2020.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Lamborghini gallardo 2020</h5>
+                    <p class="card-text">Qmimi : 5000€</p>
+                    <a href="about.html/" class="btn btn-primary">Go somewhere</a>
+                </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img src="makinat/mcclaren720s-2018.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title"> McLaren 720s 2018</h5>
+                    <p class="card-text">Qmimi : 250000€</p>
+                    <a href="about.html/" class="btn btn-primary">Go somewhere</a>
+                </div>
+            </div>  
+            <div class="card" style="width: 18rem;">
+                <img src="makinat/opel-astra.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title"> Opel Astra 2002</h5>
+                    <p class="card-text">Qmimi : 3000€</p>
+                    <a href="about.html/" class="btn btn-primary">Go somewhere</a>
+                </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img src="makinat/passat-b7-2012-1.6-105hp.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title"> Passat b7 2012</h5>
+                    <p class="card-text">Qmimi : 13000€</p>
+                    <a href="about.html/" class="btn btn-primary">Go somewhere</a>
+                </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img src="makinat/porsche-911-2024.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title"> Porsche 911 2024</h5>
+                    <p class="card-text">Qmimi : 112500€</p>
+                    <a href="about.html/" class="btn btn-primary">Go somewhere</a>
+                </div>
+            </div>    
+    </div>
 
 <script src="home.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </body>
 </html>
