--- a/projekti ne grup/sign.html
+++ b/projekti ne grup/sign.html
@@ -4,20 +4,60 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-        <link rel="stylesheet" href="sign.css">       
+        <link rel="stylesheet" href="sign.css">
 </head>
 <body>
 
-        <div class="navbar">
-            <ul>
-                <li><a href="home.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="sign.html">Login</a></li>
-            </ul>
-        </div>
-   
+    <div class="navbar">
+        <ul>
+            <li><a href="home.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="sign.html">Login</a></li>
+        </ul>
+    </div>
 
+<div class="page-wrapper">
+    <div class="form-container" id="signinform">
+        <h2>Sign in Form</h2>
+        <form id="signinForm">
+            <label for="firstname">First Name:</label><br>
+            <input type="text" name="firstname" id="firstname" required><br><br>  
 
-    <script src="sing.js"></script>
+            <label for="lastname">Last Name:</label><br>
+            <input type="text" name="lastname" id="lastname" required><br><br>   
+
+            <label for="email">Email:</label><br>
+            <input type="email" name="email" id="email" required><br><br>          
+
+            <label for="password">Password:</label><br>
+            <input type="password" name="password" id="password" maxlength="25" required><br><br>
+
+            <input type="submit" id="submit" name="submit" value="Submit">
+        </form>
+    </div>
+</div>
+<section class="contact-section">
+    <div class="contact-box">
+        <h2>Get in Touch</h2>
+        <div class="line"></div>
+        <p><strong>Address:</strong> 1000, Prishtina, Kosovo</p>
+        <p><strong>Phone:</strong> +383 8888-888</p>
+        <p><strong>Email:</strong> contact@autoKosova.com</p>
+    </div>
+</section>
+
+<footer>
+    <section class="contact-section">
+    <div class="contact-box">
+        <h2>Get in Touch</h2>
+        <div class="line"></div>
+        <p><strong>Address:</strong> 1000, Prishtina, Kosovo</p>
+        <p><strong>Phone:</strong> +383 8888-888</p>
+        <p><strong>Email:</strong> contact@autoKosova.com</p>
+    </div>
+</section>
+    <p>&copy; 2025 - autoKosova. All rights reserved.</p>
+</footer>
+<script src="sing.js"></script>
 </body>
 </html>
