--- a/projekti ne grup/about.html
+++ b/projekti ne grup/about.html
@@ -39,12 +39,40 @@
 
   <div id="car-list"></div>
 
-  <footer>
-    <p>© 2025 Luxury Car Showroom | Designed by GPT-5 🚀</p>
-  </footer>
+  <header>
+    <h1>About Our Company</h1>
+    <p>Discover who we are, our mission, and why we lead in luxury cars.</p>
+  </header>
 
+  <section class="about-section">
+    <div class="about-container">
+      <div class="about-text">
+        <h2>Our Story</h2>
+        <p>
+          Founded in 2010, Luxury Car Showroom, has grown from a small premium car dealer 
+          into one of the most recognized luxury car brands in the region. Our passion for precision, 
+          innovation, and design excellence has made us a trusted name for car enthusiasts and collectors alike.
+        </p>
 
+        <h2>Our Mission</h2>
+        <p>
+          We aim to deliver not just cars, but exceptional experiences. Every vehicle in our collection 
+          represents the perfect blend of engineering and art. From sports models to elegant sedans, 
+          we ensure every customer drives away with style and confidence.
+        </p>
 
+        <h2>Why Choose Us?</h2>
+        <ul>
+          <li>Over 15 years of trusted service</li>
+          <li>Exclusive access to top-tier luxury models</li>
+          <li>Certified inspection and quality assurance</li>
+          <li>24/7 customer support and consultation</li>
+        </ul>
+      </div>
+
+      
+    </div>
+  </section>
     
 <script src="about.js"></script>
 </body>
