--- a/projekti ne grup/home.html
+++ b/projekti ne grup/home.html
@@ -10,14 +10,16 @@
 <body>
     
     <div class="main-navbar">
+        <img src="autokosova logo.png" alt="Logo" id="logo">
         <ul>
             <li><a href="home.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="sign.html">Login</a></li>
         </ul>
     </div>
+  <input type="text" id="search" placeholder="Search cars..." />
    <div class="card-group">
-  <div class="card" style="width: 700px;">
+  <div class="card" style="width: 600px;">
     <img src="makinat/audiA5-quattro-6-44km-tkalume.jpg" style="width:450px; height: 300px;"class="card-img-top" alt="...">
     <div class="card-body">
       <h5 class="card-title">Audi A5 2016</h5>
@@ -25,7 +27,7 @@
       <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
     </div>
   </div>
-  <div class="card" style="width: 700px;">
+  <div class="card" style="width: 600px;">
     <img src="makinat/bmw-m3-competition-2022.jpg" style="width:450px; height: 300px;" class="card-img-top" alt="...">
     <div class="card-body">
       <h5 class="card-title">BMW M3 competition 2022</h5>
@@ -33,10 +35,10 @@
       <p class="card-text"><small class="text-body-secondary">Last updated 8 mins ago</small></p>
     </div>
   </div>
-  <div class="card" style="width: 700px;">
+  <div class="card" style="width: 600px;">
     <img src="makinat/ford-focus-2008.jpg" style="width:450px; height: 300px;" class="card-img-top" alt="...">
     <div class="card-body">
-      <h5 class="card-title">ford focus 2008</h5>
+      <h5 class="card-title">Ford Focus 2008</h5>
       <p class="card-text">Qmimi : 2800€</p>
       <p class="card-text"><small class="text-body-secondary">Last updated 7 mins ago</small></p>
     </div>
@@ -44,7 +46,7 @@
   </div>
 
  
-  <div class="card" style="width: 700px;">
+  <div class="card" style="width: 600px;">
     <img src="makinat/G-class-amg-g63.avif" style="width:450px; height: 300px;" class="card-img-top" alt="...">
     <div class="card-body">
       <h5 class="card-title">G class mercedes G63</h5>
@@ -55,7 +57,7 @@
     </div>
 
      <div class="card-group">
-  <div class="card" style="width: 700px;">
+  <div class="card" style="width: 600px;">
     <img src="makinat/golf5-2.0.tdi.jpg" style="width:450px; height: 300px;" class="card-img-top" alt="...">
     <div class="card-body">
       <h5 class="card-title">Golf 5 2010</h5>
@@ -64,7 +66,7 @@
     </div>
   </div>
 
-<div class="card" style="width: 700px;">
+<div class="card" style="width: 600px;">
     <img src="makinat/mcclaren720s-2018.jpg" style="width:450px; height: 300px;" class="card-img-top" alt="...">
     <div class="card-body">
       <h5 class="card-title">Mc Laren 720s 2018</h5>
@@ -72,7 +74,7 @@
       <p class="card-text"><small class="text-body-secondary">Last updated 2 mins ago</small></p>
     </div>
   </div>
-  <div class="card" style="width: 700px;">
+  <div class="card" style="width: 600px;">
     <img src="makinat/opel-astra.jpg" style="width:450px; height: 300px;" class="card-img-top" alt="...">
     <div class="card-body">
       <h5 class="card-title">Opel Astra 2002</h5>
@@ -80,7 +82,7 @@
       <p class="card-text"><small class="text-body-secondary">Last updated 23 mins ago</small></p>
     </div>
   </div>
-  <div class="card" style="width: 700px;">
+  <div class="card" style="width: 600px;">
     <img src="makinat/lamborghini-gallardo-2020.jpg" style="width:450px; height: 300px;" class="card-img-top" alt="...">
     <div class="card-body">
       <h5 class="card-title">Lamborghini Gallardo 2010</h5>
@@ -91,7 +93,7 @@
     </div>
   <div class="card-group">
   
-  <div class="card" style="width: 700px;">
+  <div class="card" style="width: 600px;">
     <img src="makinat/passat-b7-2012-1.6-105hp.jpg" style="width:450px; height: 300px;" class="card-img-top" alt="...">
     <div class="card-body">
       <h5 class="card-title">Passat B7 2012</h5>
@@ -99,7 +101,7 @@
       <p class="card-text"><small class="text-body-secondary">Last updated 13 mins ago</small></p>
     </div>
   </div>
-  <div class="card" style="width: 700px;">
+  <div class="card" style="width: 600px;">
     <img src="makinat/2024_porsche_911-s-t_front.jpg" style="width:450px; height: 300px;" class="card-img-top" alt="...">
     <div class="card-body">
       <h5 class="card-title">Porsche 911 2024</h5>
@@ -107,23 +109,36 @@
       <p class="card-text"><small class="text-body-secondary">Last updated 10 mins ago</small></p>
     </div>
   </div>
-  <div class="card" style="width: 700px;">
+  <div class="card" style="width: 600px;">
     <img src="makinat/Audi-RS6-Avant-Quattro.jpg" style="width:450px; height: 300px;" class="card-img-top" alt="...">
     <div class="card-body">
       <h5 class="card-title">Audi RS6 2020</h5>
       <p class="card-text">Qmimi : 45000€</p>
-      <p class="card-text"><small class="text-body-secondary">Last updated 10 mins ago</small></p>
+      <p class="card-text"><small class="text-body-secondary">Last updated 5 mins ago</small></p>
     </div>
   </div>
-  <div class="card" style="width: 700px;">
+  <div class="card" style="width: 600px;">
     <img src="makinat/touareg-2014.jpg" style="width:450px; height: 300px;" class="card-img-top" alt="...">
     <div class="card-body">
       <h5 class="card-title">Touareg 2014</h5>
       <p class="card-text">Qmimi : 15000€</p>
-      <p class="card-text"><small class="text-body-secondary">Last updated 10 mins ago</small></p>
+      <p class="card-text"><small class="text-body-secondary">Last updated 17 mins ago</small></p>
     </div>
   </div>
 </div>
+
+<footer>
+    <section class="contact-section">
+    <div class="contact-box">
+        <h2>Get in Touch</h2>
+        <div class="line"></div>
+        <p><strong>Address:</strong> 10000, Prishtina, Kosovo</p>
+        <p><strong>Phone:</strong> +383 8888-888</p>
+        <p><strong>Email:</strong> contact@autoKosova.com</p>
+    </div>
+</section>
+    <p>&copy; 2025 - autoKosova. All rights reserved.</p>
+</footer>
 
 <script src="home.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
