--- a/projekti ne grup/home.html
+++ b/projekti ne grup/home.html
@@ -6,6 +6,7 @@
     <title>AutoKosova.com</title>
     <link rel="stylesheet" href="home.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+
 </head>
 <body>
     
@@ -13,121 +14,36 @@
         <img src="autokosova logo.png" alt="Logo" id="logo">
         <ul>
             <li><a href="home.html">Home</a></li>
+            <li><a href="products.html">Products</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="sign.html">Login</a></li>
         </ul>
     </div>
-  <input type="text" id="search" placeholder="Search cars..." />
-   <div class="card-group">
-  <div class="card" style="width: 600px;">
-    <img src="makinat/audiA5-quattro-6-44km-tkalume.jpg" style="width:450px; height: 300px;"class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">Audi A5 2016</h5>
-      <p class="card-text">Qmimi : 20500€</p>
-      <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+    <div id="carouselExample" class="carousel slide">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="autosalonifoto.png" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="shefi.png" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="shefitushitkerr.png" class="d-block w-100" alt="...">
+    </div>
+     <div class="carousel-item">
+      <img src="shefimesheik.png" class="d-block w-100" alt="...">
     </div>
   </div>
-  <div class="card" style="width: 600px;">
-    <img src="makinat/bmw-m3-competition-2022.jpg" style="width:450px; height: 300px;" class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">BMW M3 competition 2022</h5>
-      <p class="card-text">Qmimi : 70000€</p>
-      <p class="card-text"><small class="text-body-secondary">Last updated 8 mins ago</small></p>
-    </div>
-  </div>
-  <div class="card" style="width: 600px;">
-    <img src="makinat/ford-focus-2008.jpg" style="width:450px; height: 300px;" class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">Ford Focus 2008</h5>
-      <p class="card-text">Qmimi : 2800€</p>
-      <p class="card-text"><small class="text-body-secondary">Last updated 7 mins ago</small></p>
-    </div>
-
-  </div>
-
- 
-  <div class="card" style="width: 600px;">
-    <img src="makinat/G-class-amg-g63.avif" style="width:450px; height: 300px;" class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">G class mercedes G63</h5>
-      <p class="card-text">Qmimi : 138000€</p>
-      <p class="card-text"><small class="text-body-secondary">Last updated 5 mins ago</small></p>
-    </div>
-  </div>
-    </div>
-
-     <div class="card-group">
-  <div class="card" style="width: 600px;">
-    <img src="makinat/golf5-2.0.tdi.jpg" style="width:450px; height: 300px;" class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">Golf 5 2010</h5>
-      <p class="card-text">Qmimi : 5000€</p>
-      <p class="card-text"><small class="text-body-secondary">Updated just now</small></p>
-    </div>
-  </div>
-
-<div class="card" style="width: 600px;">
-    <img src="makinat/mcclaren720s-2018.jpg" style="width:450px; height: 300px;" class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">Mc Laren 720s 2018</h5>
-      <p class="card-text">Qmimi : 200000€</p>
-      <p class="card-text"><small class="text-body-secondary">Last updated 2 mins ago</small></p>
-    </div>
-  </div>
-  <div class="card" style="width: 600px;">
-    <img src="makinat/opel-astra.jpg" style="width:450px; height: 300px;" class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">Opel Astra 2002</h5>
-      <p class="card-text">Qmimi : 3000€</p>
-      <p class="card-text"><small class="text-body-secondary">Last updated 23 mins ago</small></p>
-    </div>
-  </div>
-  <div class="card" style="width: 600px;">
-    <img src="makinat/lamborghini-gallardo-2020.jpg" style="width:450px; height: 300px;" class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">Lamborghini Gallardo 2010</h5>
-      <p class="card-text">Qmimi : 150000€</p>
-      <p class="card-text"><small class="text-body-secondary">Last updated 1 mins ago</small></p>
-    </div>
-  </div>
-    </div>
-  <div class="card-group">
-  
-  <div class="card" style="width: 600px;">
-    <img src="makinat/passat-b7-2012-1.6-105hp.jpg" style="width:450px; height: 300px;" class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">Passat B7 2012</h5>
-      <p class="card-text">Qmimi : 13000€</p>
-      <p class="card-text"><small class="text-body-secondary">Last updated 13 mins ago</small></p>
-    </div>
-  </div>
-  <div class="card" style="width: 600px;">
-    <img src="makinat/2024_porsche_911-s-t_front.jpg" style="width:450px; height: 300px;" class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">Porsche 911 2024</h5>
-      <p class="card-text">Qmimi : 112500€</p>
-      <p class="card-text"><small class="text-body-secondary">Last updated 10 mins ago</small></p>
-    </div>
-  </div>
-  <div class="card" style="width: 600px;">
-    <img src="makinat/Audi-RS6-Avant-Quattro.jpg" style="width:450px; height: 300px;" class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">Audi RS6 2020</h5>
-      <p class="card-text">Qmimi : 45000€</p>
-      <p class="card-text"><small class="text-body-secondary">Last updated 5 mins ago</small></p>
-    </div>
-  </div>
-  <div class="card" style="width: 600px;">
-    <img src="makinat/touareg-2014.jpg" style="width:450px; height: 300px;" class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">Touareg 2014</h5>
-      <p class="card-text">Qmimi : 15000€</p>
-      <p class="card-text"><small class="text-body-secondary">Last updated 17 mins ago</small></p>
-    </div>
-  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
 </div>
-
-<footer>
+    <footer>
     <section class="contact-section">
     <div class="contact-box">
         <h2>Get in Touch</h2>
