--- a/projekti ne grup/home.html
+++ b/projekti ne grup/home.html
@@ -43,6 +43,18 @@
     <span class="visually-hidden">Next</span>
   </button>
 </div>
+<div class="card" style="width: 18rem;">
+  <img src="employerofthemonthoctober.png" class="card-img-top" alt="...">
+  <div class="card-body">
+    <p class="card-text">Employer of the month "OCTOBER"</p>
+  </div>
+</div>
+<div class="card" style="width: 18rem;">
+  <img src="employerofthemonthnovember.png" class="card-img-top" alt="...">
+  <div class="card-body">
+    <p class="card-text">Employer of the month "NOVEMBER"</p>
+  </div>
+</div>
     <footer>
     <section class="contact-section">
     <div class="contact-box">
