--- a/projekti ne grup/about.html
+++ b/projekti ne grup/about.html
@@ -11,6 +11,7 @@
     <div class="navbar">
         <ul>
             <li><a href="home.html">Home</a></li>
+            <li><a href="products.html">Products</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="sign.html">Login</a></li>
         </ul>
