employee of the month

--- a/projekti ne grup/home.html
+++ b/projekti ne grup/home.html
@@ -44,14 +44,18 @@
   </button>
 </div>
   
+    <div class="frames-row">
     <div class="frame">
         <img src="employerofthemonthoctober.png" alt="Adi">
         <div class="badge">Employee of the Month October</div>
     </div>
+
     <div class="frame">
         <img src="employerofthemonthnovember.png" alt="Roni">
         <div class="badge">Employee of the Month November</div>
     </div>
+</div>
+
     
     <footer>
     <section class="contact-section">
